--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/undraw_outer_space_re_u9vd.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/rtu.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,7 +11,7 @@
     />
     <link
       rel="apple-touch-icon"
-      href="%PUBLIC_URL%/undraw_Aircraft_re_m05i-removebg-preview.png"
+      href="%PUBLIC_URL%/undraw_metrics_re_6g90.svg"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
